<resources>
    <string name="app_name">KELOMPOK 38</string>
    <string name="tittle">PRAKTIKUM MDP MODUL ANDROID</string>
    <string name="regtittle">Hai Orang Baru, Masukkan Data Kamu!</string>
    <string name="user">username</string>
    <string name="password">password</string>
    <string name="login">masuk</string>
    <string name="register">register</string>
    <string name="logout">Logout</string>
    <string name="Header">Selamat datang Di Aplikasiku</string>
    <string name="name">Nama Kamu</string>
    <string name="description">Selanjutnya akan di jelaskan di modul android berikutnya Mengenai API dan MVP</string>
</resources>
